--- a/Resumos/Prova-1/main.tex
+++ b/Resumos/Prova-1/main.tex
@@ -8,6 +8,8 @@
 \usepackage[utf8]{inputenc}  
 \usepackage{enumitem}
 \usepackage{listings}
+\usepackage{hyperref}
+
 
 \lstset{
 language=C,
@@ -30,7 +32,13 @@ literate=
 {>}{{{\color{red}>}}}1
 {<}{{{\color{red}<}}}1
 }
-
+\hypersetup{
+	colorlinks,
+	citecolor=black,
+	filecolor=black,
+	linkcolor=black,
+	urlcolor=black
+}
 \setlist[enumerate]{after={\bigskip}}
 \setlist[itemize]{after={\bigskip}}
 \newcommand{\disciplina}{\textit{Programação de Computadores I }}
